// SPDX-License-Identifier: MIT

syntax = "proto2";

import "ipc-desc.proto";

message ipc_sem_entry {
	required ipc_desc_entry	desc	= 1;
	required uint32		nsems	= 2;
}
